apps/krishna-kishore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krishna-kishore-deployment
  labels:
    app: nginx
spec:
  replicas: 2   # number of pods
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
