apps/krishna-kishore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krishna-kishore-service
  labels:
    app: nginx
spec:
  type: ClusterIP   # Change to NodePort/LoadBalancer if needed
  selector:
    app: nginx
  ports:
    - port: 80        # Service port
      targetPort: 80  # Container port
